# CodeSpace-1

./: AutoLoginBaidu.py  MakefileGenerator.py  README.md  RGB_Dex2Hex.py  Read_100W_Files.cpp  gitUse.md
AutoPaper/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  TAGS  autopager  cmake_install.cmake  cscope.files  cscope.out  main.cpp
AutoPaper/src/: 1  CMakeCache.txt  CMakeLists.txt  Constants.cpp  Constants.hpp  GlobalInclude.hpp  Makefile  MiscUtils.cpp  MiscUtils.hpp  PdfCommonData.cpp  PdfCommonData.hpp  PdfGeneratorEngine.cpp  PdfGeneratorEngine.hpp  PdfGeneratorEngineHelper.cpp  PdfGeneratorEngineHelper.hpp  PdfXmlLoader.cpp  PdfXmlLoader.hpp  Test  Test.cpp  XmlLoader.cpp  XmlLoader.hpp  cmake_install.cmake  cscope.files  cscope.out  doc.txt  pdf.xml
AutoPaper/tinyxml/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libtinyxml.so.1.0  tinyxml.cpp  tinyxml.h  tinyxml.h~
Books/: README.txt
Cache_FIFO/: Makefile  Test_Main.cpp  cache_fifo  cache_link.cpp  cache_link.h
Chess/: CommonUtils.cpp  CommonUtils.h  GameControl.cpp  GameControl.cpp~  GameControl.hpp  GameControl.hpp~  GoBangBoard.cpp  GoBangBoard.cpp~  GoBangBoard.hpp  GoBangBoard.hpp~  Makefile  Player.cpp  Player.hpp  TAGS  maintest.cpp
Chess/UI/: TAGS
Chess/UI/GoBang/: GoBang.jucer
Chess/UI/GoBang/JuceLibraryCode/: AppConfig.h  JuceHeader.h
CountId/: CountId.cpp  CountId.hpp  CountId.sublime-workspace  Makefile  main.cpp  test.xml
CountId/ThirdLib/tinyxml/: xmltest
DesignPattern/: README.md
JavaAndroid/Brightness/: AndroidManifest.xml
KenChat/: .gitignore  GPATH  GRTAGS  GSYMS  GTAGS  Makefile  README.org
KenChat/include/: server.hpp  server_manager.hpp  utils.hpp
KenChat/rapidjson/error/: cmake_install.cmake
KenChat/rapidjson/internal/: cmake_install.cmake
KenChat/src/: CMakeLists.txt  README.org  config.json  server.cpp  server_manager.cpp  utils.hpp
KenChat/src/client/: CMakeLists.txt  Makefile  client.cpp  client.hpp  clientMain.cpp  test.lua
KenChat/src/server/: CMakeLists.txt  Makefile  kenChatServer  server.cpp  server.hpp  serverMain.cpp  server_config.hpp  server_manager.cpp  server_manager.hpp
KenChat/test/: ServerManagerTest.cpp  a.out  utilsTest.cpp
KenHttpd/: .gitignore  CMakeCache.txt  CMakeLists.txt  ClientSocket.cpp  ClientSocket.hpp  ClientTest.cpp  DNSUtil.cpp  DNSUtil.hpp  HttpClient.cpp  HttpClient.hpp  HttpManager.cpp  HttpManager.hpp  HttpResponseData.cpp  HttpResponseData.hpp  HttpTest  HttpTest.cpp  KenHttpTest  Makefile  MiscUtils.cpp  MiscUtils.hpp  OnRequestListener.cpp  OnRequestListener.hpp  ServerSocket.cpp  ServerTest.cpp  SocketCommon.cpp  TAGS  Test.cpp  ThreadPool.cpp  ThreadPool.hpp  ThreadPoolTest.cpp  Url.cpp  Url.hpp  cmake_install.cmake  cscope.files  dnsTest  gethostbyname.cpp  threadPoolBuild.sh  updateTags.sh
KenHttpd/Linux_voice_1.109/samples/iat_sample/: iat_sample.c
KenRobot/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
KenRobot/KenHttp/: ClientSocket.hpp  HttpClient.hpp  HttpError.hpp  HttpManager.hpp  HttpResponseData.hpp  MiscUtils.hpp  ServerSocket.hpp  SocketCommon.hpp  ThreadPool.hpp
KenRobot/rapidjson/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
KenRobot/rapidjson-master/doc/: Doxyfile.zh-cn
KenRobot/rapidjson/error/: Makefile
KenRobot/rapidjson/internal/: Makefile
KenRobot/src/: CMakeCache.txt  CMakeLists.txt  Constants.hpp  KenRobot  KenRobot.cpp  KenRobot.hpp  Makefile  ResponseParser.cpp  ResponseParser.hpp  Singleton.hpp  VoiceManager.cpp  VoiceManager.hpp  cmake_install.cmake  main.cpp  voice
KenRobot/src/msc/72b4397d3550cf3766b57567423efc08/: u.data  urec.data
MagicCube/: Makefile  Makefile~  magiccube.cpp  magiccube.cpp~  magiccube.hpp  magiccube.hpp.gch  magiccube.hpp~
MusicPlayer/: MusicPlayer.py  MusicPlayer.py~
MusicPlayer/Controler/: MusicPlayerLayout.py  MusicPlayerLayout.py~  PlayerUtils.py  __init__.py
Python/BuildUtil/: build_config.xml  buildutil.py  buildutil.py~  config.xml  config.xml~
Python/BuildUtil/a/: a.txt  a.txt~
Python/BuildUtil/b/: a.txt
Python/WorkTimer/: .checkintime  WorkTimer.py
StringUtls/: #StringUtils.h#  .#StringUtils.h  MainTest.cpp  StringUtils.cpp  StringUtils.h  a.out
contacts/: index.html  index.html~
contacts/css/: contact.css
contacts/js/: contact.js
contacts/php/: contact_db_util.php  contact_db_util.php~  contact_model.php  create_contact_db.php  db_util.php  db_util.php~  insert_contact.php  insert_contact.php~  query_contacts.php
(+38 files in other folders)
